--- a/primerversion.html
+++ b/primerversion.html
@@ -9,6 +9,10 @@
         herramientas para desarrollar un trabajo en equipo de manera inteligente y
         rápida y por trabajo nos referimos a algún software o página que implique
         código el cual necesitemos hacerlo con un grupo de personas”
+        “Los Sistemas de Control de Versiones Distribuidos (DVCS) salvan este
+problema. Algunos ejemplos de sistemas distribuidos, aparte de Git, son
+Mercurial, Bazaar o Darcs. En este tipo de herramientas, los clientes replican
+completamente el repositorio.”
         </P>
     </BODY>
     </HTML>
